# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "macstats"
version = "0.1.0"
authors = ["Paul Horn <ǝp ʇop ɹǝʞlɐʍʇnuʞ ʇɐ ɹǝdolǝʌǝp>"]
description = "Read system stats from macOS SMC"
edition = "2018"
license = "MIT OR Apache-2.0"

[target."cfg(target_os = \"macos\")".dependencies.libc]
version = "0.2.71"

[profile.release]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false
