# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "macsmc"
version = "0.1.4"
authors = ["Paul Horn <ǝp ʇop ɹǝʞlɐʍʇnuʞ ʇɐ ɹǝdolǝʌǝp>"]
description = "Library to call the macOS SMC"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/macstats/"
repository = "https://github.com/knutwalker/macstats/"
categories = ["os"]
keywords = ["macos", "smc", "cpu"]
workspace = ".."

[dependencies.libc]
version = "0.2.71"
